[gd_scene load_steps=3 format=3 uid="uid://qgmj66fv55ig"]

[ext_resource type="Script" path="res://UI/start_menu.gd" id="1_bwnhk"]
[ext_resource type="PackedScene" uid="uid://d2ypbvp32opvk" path="res://UI/options.tscn" id="2_ui3rd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwnhk")

[node name="Options" parent="." instance=ExtResource("2_ui3rd")]
layout_mode = 1

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 435.0
offset_top = 168.0
offset_right = -426.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Quit" type="Button" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="MainPanel/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
